--- a/infoportal/static/index.css
+++ b/infoportal/static/index.css
@@ -7,12 +7,17 @@ body {
 
   margin: 0px;
   font-family: 'Open Sans', sans-serif;
+  color: white;
 }
 a {
   text-decoration: none;
   color: inherit;
 }
-.button {
+button {
+  outline: none;
+  cursor: pointer;
+}
+.link {
   background-color: rgba(255, 0, 0, 0.4);
   color: rgb(255, 255, 255);
   padding: 10px 20px;
@@ -95,6 +100,29 @@ a {
   top: 140px;
   left: 20px;
   width: 35%;
-  height: 500px;
   background-color: rgba(0, 0, 0, 0.4);
+  text-align: center;
+  padding: 5px 0 15px 0;
+}
+.filter-title {
+  font-size: 25px;
+  margin: 5px auto;
+}
+.filter-option {
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  border: none;
+  display: inline-block;
+  width: 45%;
+  height: 32px;
+  font-size: 15px;
+  margin: 5px auto;
+}
+/*.filter-option:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+  color: black;
+}*/
+.filter-chosen {
+  background-color: rgba(255, 255, 255, 0.4);
+  color: black;
 }
