--- a/infoportal/static/index.css
+++ b/infoportal/static/index.css
@@ -51,6 +51,7 @@ button {
   margin-right: 20px;
 }
 .post {
+  display: block;
   background-color: rgba(0, 0, 0, 0.4);
   color: white;
   margin-top: 20px;
