--- a/infoportal/static/index.css
+++ b/infoportal/static/index.css
@@ -69,8 +69,15 @@ button {
 .post-title {
   font-size: 30px;
 }
+.post-date {
+  font-size: 15px;
+}
 .post-text {
   font-size: 20px;
+}
+.post-categories {
+  font-size: 15px;
+  margin: 10px auto;
 }
 .form-div {
   text-align: center;
@@ -108,16 +115,17 @@ button {
 .filter-title {
   font-size: 25px;
   margin: 5px auto;
+  text-transform: uppercase;
 }
 .filter-option {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(255, 0, 0, 0.2);
   color: white;
   border: none;
   display: inline-block;
-  width: 45%;
+  width: 35%;
   height: 32px;
-  font-size: 15px;
-  margin: 5px auto;
+  font-size: 14px;
+  margin: 5px;
 }
 /*.filter-option:hover {
   background-color: rgba(255, 255, 255, 0.4);
